sdk/ios/2.0/retrieve-users.mdx
---
title: "Retrieve Users"
description: "Retrieve Users — CometChat documentation."
---



## Retrieve Logged In User Details

You can get the details of the logged-in user using the `getLoggedInUser()` method. This method can also be used to check if the user is logged in or not. If the method returns `nil`, it indicates that the user is not logged in and you need to log the user into CometChat SDK.

<Tabs>
<Tab title="Swift">
```swift
let user = CometChat.getLoggedInUser();
```

</Tab>

<Tab title="Objective C">
```objc
User *user = [CometChat getLoggedInUser];
```

</Tab>

</Tabs>

This method will return a `User` object containing all the information related to the logged-in user.

## Retrieve List of Users

In order to fetch the list of users, you can use the `UsersRequest` class. To use this class i.e to create an object of the UsersRequest class, you need to use the `UsersRequestBuilder` class. The `UsersRequestBuilder` class allows you to set the parameters based on which the users are to be fetched.

The `UsersRequestBuilder` class allows you to set the below parameters:

### Set Limit

This method sets the limit i.e. the number of users that should be fetched in a single iteration.

<Tabs>
<Tab title="Swift">
```swift
let usersRequest = UsersRequest.UsersRequestBuilder()
.set(limit: 30)
.build()
```

</Tab>

</Tabs>

### Set Search Keyword

This method allows you to set the search string based on which the users are to be fetched.

<Tabs>
<Tab title="Swift">
```swift
let usersRequest = UsersRequest.UsersRequestBuilder()
.set(limit: 30)
.set(searchKeyword: "abc")
.build()
```

</Tab>

</Tabs>

### Set Status

The status based on which the users are to be fetched. The status parameter can contain one of the below two values:

* CometChat.UserStatus.online - will return the list of only online users.
* CometChat.UserStatus.offline - will return the list of only offline users.

If this parameter is not set, will return all the available users.

<Tabs>
<Tab title="Swift">
```swift
let usersRequest = UsersRequest.UsersRequestBuilder()
.set(limit: 30)
.set(status: .online)
.build()
```

</Tab>

</Tabs>

### Hide Blocked Users

This method is used to determine if the blocked users should be returned as a part of the user list. if set to true, the user list will not contain the users blocked by the logged-in user.

<Tabs>
<Tab title="Swift">
```swift
let usersRequest = UsersRequest.UsersRequestBuilder()
.set(limit: 30)
.hideBlockedUsers(true)
.build()
```

</Tab>

</Tabs>

### Set Roles

This method allows you to fetch the users based on multiple roles.

<Tabs>
<Tab title="Swift">
```swift
let usersRequest = UsersRequest.UsersRequestBuilder()
.set(limit: 30)
.set(roles : ["role1","role2"])
.build()
```

</Tab>

</Tabs>

### Friends Only

This property when set to true will return only the friends of the logged-in user.

<Tabs>
<Tab title="Swift">
```swift
let usersRequest = UsersRequest.UsersRequestBuilder()
.set(limit: 30)
.friendsOnly(true)
.build();
```

</Tab>

</Tabs>

### Set Tags

This method accepts a list of tags based on which the list of users is to be fetched. The list fetched will only contain the users that have been tagged with the specified tags.

<Tabs>
<Tab title="Swift">
```swift
let usersRequest = UsersRequest.UsersRequestBuilder()
.set(limit: 30)
.set(tags: ["tag1", "tag2"])
.build();
```

</Tab>

</Tabs>

### With Tags

This property when set to true will fetch tags data along with the list of users.

<Tabs>
<Tab title="Swift">
```swift
let usersRequest = UsersRequest.UsersRequestBuilder()
.set(limit: 30)
.withTags(true)
.build()
```

</Tab>

</Tabs>

### Set UIDs

This method accepts a list of UIDs based on which the list of users is fetched. A maximum of 25 users can be fetched.

<Tabs>
<Tab title="Swift">
```swift
let UIDs = ["cometchat-uid-1", "cometchat-uid-2"]
let usersRequest = UsersRequest.UsersRequestBuilder()
.set(limit: limit)
.setUIDs(UIDs)
.build();
```

</Tab>

</Tabs>

Finally, once all the parameters are set to the builder class, you need to call the build() method to get the object of the UsersRequest class.

Once you have the object of the `UsersRequest` class, you need to call the `fetchNext()` method. Calling this method will return a list of `User` objects containing n number of users where n is the limit set in the builder class.

<Tabs>
<Tab title="Swift">
```swift
let limit = 20;

let usersRequest = UsersRequest.UsersRequestBuilder(limit: limit).build();

usersRequest.fetchNext(onSuccess: { (users) in

  for user in users {

     print("User: " + user.stringValue())
  }

}) { (error) in

  print("User list fetching failed with error: " + error!.errorDescription);
}
```

</Tab>

<Tab title="Objective C">
```objc
NSInteger limit = 30 ;

UsersRequest *userRequest = [[[UsersRequestBuilder alloc]initWithLimit:limit] build];

[userRequest fetchNextOnSuccess:^(NSArray<User *> * users) {
    
    for (User *user in users) {

      NSLog(@"User: %@ ",[user stringValue]);
    }
    
} onError:^(CometChatException * error) {
    
    NSLog(@"User list fetching failed with error: %@",[error errorDescription]);
    
}];
```

</Tab>

</Tabs>

## Retrieve Particular User Details

To get the information of a user, you can use the `getUser()` method.

<Tabs>
<Tab title="Swift">
```swift
let uid  = "cometchat-uid-1";

CometChat.getUser(UID: uid, onSuccess: { (user) in

  print("User: " + user.stringValue())

}) { (error) in

  print("User fetching failed with error: " + error.errorDescription);
}
```

</Tab>

<Tab title="Objective C">
```objc
NSString *UID = @"cometchat-uid-1";

[CometChat getUserWithUID:UID onSuccess:^(User * user) {
    
    NSLog(@"User: %@",[user stringValue]);
    
} onError:^(CometChatException * error) {
    
    NSLog(@"User fetching failed with error: %@",[error errorDescription]);
}];
```

</Tab>

</Tabs>

The `getUser()` method takes the following parameters:

| Parameter | Description                                                   |
| --------- | ------------------------------------------------------------- |
| UID       | The `UID` of the user for whom the details are to be fetched. |

On success, the You will receive a `User` objects.
